--- a/question.html
+++ b/question.html
@@ -15,8 +15,8 @@
                 <h1 class="text-4xl">Dev<span class="font-bold">Board</span></h1>
               </div>
               <div>
-         <button id="button" class="bg-blue-700 px-5 py-4 text-white
-         font-bold rounded-xl">Back To Desk</button>
+         <a href="./index.html" class="bg-blue-700 px-5 py-4 text-white
+         font-bold rounded-xl">Back To Desk</a>
                 </div>
                 </div>
 
