decrease the card counts

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
            <h2 class="font-[500px] text-[20px]">21 March 2025</h2>
            </div>
            <button class="bg-blue-500 text-white px-4 py-1
-           rounded-xl">Completed</button>
+           rounded-xl cursor-pointer complete-button">Completed</button>
            </div>
          </div>
 
@@ -103,7 +103,7 @@
             <h2 class="font-[500px] text-[20px]">21 March 2025</h2>
             </div>
             <button class="bg-blue-500 text-white px-4 py-1
-            rounded-xl">Completed</button>
+            rounded-xl cursor-pointer complete-button">Completed</button>
             </div>
           </div>
 
@@ -118,7 +118,7 @@
             <h2 class="font-[500px] text-[20px]">21 March 2025</h2>
             </div>
             <button class="bg-blue-500 text-white px-4 py-1
-            rounded-xl">Completed</button>
+            rounded-xl cursor-pointer complete-button">Completed</button>
             </div>
           </div>
 
@@ -133,7 +133,7 @@
             <h2 class="font-[500px] text-[20px]">21 March 2025</h2>
             </div>
             <button class="bg-blue-500 text-white px-4 py-1
-            rounded-xl">Completed</button>
+            rounded-xl cursor-pointer complete-button">Completed</button>
             </div>
           </div>
 
@@ -148,7 +148,7 @@
             <h2 class="font-[500px] text-[20px]">21 March 2025</h2>
             </div>
             <button class="bg-blue-500 text-white px-4 py-1
-            rounded-xl" >Completed</button>
+            rounded-xl cursor-pointer complete-button" >Completed</button>
             </div>
           </div>
 
@@ -163,7 +163,7 @@
             <h2 class="font-[500px] text-[20px]">21 March 2025</h2>
             </div>
             <button class="bg-blue-500 text-white px-4 py-1
-            rounded-xl">Completed</button>
+            rounded-xl cursor-pointer complete-button">Completed</button>
             </div>
           </div>
 
