added task title in the task history

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button class="px-5 py-2 flex items-center gap-2 rounded-2xl
                  bg-slate-100">
                      <img src="/assets/checkbox.png" alt="">
-                    <p id="card24" class="text-2xl font-bold">24</p>
+                    <p id="task-complete-count" class="text-2xl font-bold">23</p>
 
                 </button>
 
@@ -94,7 +94,7 @@
 
          <div class="bg-slate-100 rounded-xl p-4 shadow-xl card">
             <button class="text[16px] px-4 py-2 bg-white rounded-xl">CloudSync</button>
-            <h1 class="text-2xl mt-4 font-[500px]">Add Dark Mode </h1>
+            <h1 class="text-2xl mt-4 font-[500px] title">Add Dark Mode </h1>
             <p class=" mt-4 bg-white text-[16px] rounded-xl p-4">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
              and ensure onClick works properly</p>
             <div class="flex mt-4 justify-between">
@@ -109,7 +109,7 @@
 
           <div class="bg-slate-100 rounded-xl p-4 shadow-xl card">
             <button class="text[16px] px-4 py-2 bg-white rounded-xl">SwiftPay</button>
-            <h1 class="text-2xl mt-4 font-[500px]">Optimize  Home page  </h1>
+            <h1 class="text-2xl mt-4 font-[500px] title">Optimize  Home page  </h1>
             <p class=" mt-4 bg-white text-[16px] rounded-xl p-4">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
              and ensure onClick works properly</p>
             <div class="flex mt-4 justify-between">
@@ -124,7 +124,7 @@
 
           <div class="bg-slate-100 rounded-xl p-4 shadow-xl card">
             <button class="text[16px] px-4 py-2 bg-white rounded-xl">Meta</button>
-            <h1 class="text-2xl mt-4 font-[500px]">Add new emoji 🤲 </h1>
+            <h1 class="text-2xl mt-4 font-[500px] title">Add new emoji 🤲 </h1>
             <p class=" mt-4 bg-white text-[16px] rounded-xl p-4">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
              and ensure onClick works properly</p>
             <div class="flex mt-4 justify-between">
@@ -139,7 +139,7 @@
 
           <div class="bg-slate-100 rounded-xl p-4 shadow-xl card">
             <button class="text[16px] px-4 py-2 bg-white rounded-xl">Google LLC</button>
-            <h1 class="text-2xl mt-4 font-[500px]">Integrate OpenAI API  </h1>
+            <h1 class="text-2xl mt-4 font-[500px] title">Integrate OpenAI API  </h1>
             <p class=" mt-4 bg-white text-[16px] rounded-xl p-4">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
              and ensure onClick works properly</p>
             <div class="flex mt-4 justify-between">
@@ -154,7 +154,7 @@
 
           <div class="bg-slate-100 rounded-xl p-4 shadow-xl card">
             <button class="text[16px] px-4 py-2 bg-white rounded-xl">Glassdoar</button>
-            <h1 class="text-2xl mt-4 font-[500px]">Improve Job searching </h1>
+            <h1 class="text-2xl mt-4 font-[500px] title">Improve Job searching </h1>
             <p class=" mt-4 bg-white text-[16px] rounded-xl p-4">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
              and ensure onClick works properly</p>
             <div class="flex mt-4 justify-between">
@@ -187,10 +187,12 @@
       
          <div class="text-center mt-4">
     <button class="bg-blue-500 text-white 
-    px-4 py-2 rounded-xl"onclick="clearHistory()">Clear History</button>
+    px-4 py-2 rounded-xl">Clear History</button>
     </div>
 
-    <div id="history" class="mt-4 p-4 shadow-md bg-slate-100 "></div>
+    <div id="history">
+
+    </div>
         </div>
       
 
