--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <img class="bg-white p-4 rounded-full" src="./assets/calender.png" alt="">
           </div>
           <div>
-          <p class="text-2xl">Wed ,<br>
-            <span class="font-bold">Jul 28 2025</span> </p>
+          <p ><span class="text-2xl" id="day"></span>,<br>
+            <span id="date" class="font-bold text-2xl"></span> </p>
        
           </div>
          
