--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
       
          <div class="text-center mt-4">
-    <button class="bg-blue-500 text-white 
+    <button id="delete-history" class="bg-blue-500 text-white 
     px-4 py-2 rounded-xl">Clear History</button>
     </div>
 
