solve some issue

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div id="cards" class="grid mt-6 grid-cols-3 p-4 gap-4">
         <div class="bg-slate-100 rounded-xl p-4 shadow-xl card">
            <button class="text[16px] px-4 py-2 bg-white rounded-xl">ShopEase</button>
-           <h1 class="text-2xl mt-4 font-[500px]">Fix Mobile Button Issue </h1>
+           <h1 class="text-2xl mt-4 font-[500px] title">Fix Mobile Button Issue </h1>
            <p class=" mt-4 bg-white text-[16px] rounded-xl p-4">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
             and ensure onClick works properly</p>
            <div class="flex mt-4 justify-between">
